[gd_scene load_steps=7 format=3 uid="uid://djtd6vihyb4ph"]

[ext_resource type="Texture2D" uid="uid://dvg6h6e05k5fi" path="res://art/icons/nest.png" id="1_0c7o3"]
[ext_resource type="Texture2D" uid="uid://yph5r4u8xt3w" path="res://art/icons/egg1.png" id="2_61tgp"]
[ext_resource type="Script" uid="uid://coxr4fw58q14s" path="res://scenes/nest.gd" id="2_a0nmq"]
[ext_resource type="Script" uid="uid://br1lu1lnknnov" path="res://scripts/egg.gd" id="3_a0nmq"]
[ext_resource type="Resource" uid="uid://bo03k2xsccltr" path="res://resources/bird-one.tres" id="4_5fcmp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1l7w"]

[node name="Nest" type="TextureRect"]
offset_left = 440.0
offset_top = 195.0
offset_right = 696.0
offset_bottom = 451.0
texture = ExtResource("1_0c7o3")
stretch_mode = 2
script = ExtResource("2_a0nmq")

[node name="Egg1" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 120.0
offset_bottom = 125.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("2_61tgp")
script = ExtResource("3_a0nmq")
species = ExtResource("4_5fcmp")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg2" type="Button" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 92.0
offset_right = 162.0
offset_bottom = 164.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("2_61tgp")
script = ExtResource("3_a0nmq")
species = ExtResource("4_5fcmp")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg3" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 104.0
offset_right = 117.0
offset_bottom = 176.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("2_61tgp")
script = ExtResource("3_a0nmq")
species = ExtResource("4_5fcmp")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg4" type="Button" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 82.0
offset_right = 213.0
offset_bottom = 154.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("2_61tgp")
script = ExtResource("3_a0nmq")
species = ExtResource("4_5fcmp")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg5" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 127.0
offset_right = 192.0
offset_bottom = 199.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("2_61tgp")
script = ExtResource("3_a0nmq")
species = ExtResource("4_5fcmp")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg6" type="Button" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 46.0
offset_right = 181.0
offset_bottom = 118.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("2_61tgp")
script = ExtResource("3_a0nmq")
species = ExtResource("4_5fcmp")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[connection signal="selection" from="Egg1" to="." method="_on_egg_1_selection"]
[connection signal="selection" from="Egg2" to="." method="_on_egg_2_selection"]
[connection signal="selection" from="Egg3" to="." method="_on_egg_3_selection"]
[connection signal="selection" from="Egg4" to="." method="_on_egg_4_selection"]
[connection signal="selection" from="Egg5" to="." method="_on_egg_5_selection"]
[connection signal="selection" from="Egg6" to="." method="_on_egg_6_selection"]
